welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 0 to nums.length-1) {
         ^